Fix CF7 live form on small screens.

--- a/assets/css/admin-cf7.css
+++ b/assets/css/admin-cf7.css
@@ -2,11 +2,7 @@ body.toplevel_page_wpcf7 #poststuff {
 	display: grid;
 	gap: 0 20px;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(4, minmax(100px, auto));
-	/*grid-template-areas:*/
-	/*	"post-body-content post-body-content"*/
-	/*	"postbox-container-1 postbox-container-live"*/
-	/*	"postbox-container-2 postbox-container-live";*/
+	grid-template-rows: repeat(3, minmax(100px, auto));
 	width: 100%;
 	min-width: unset;
 }
@@ -72,13 +68,29 @@ body.toplevel_page_wpcf7 #poststuff #post-body.columns-2 #postbox-container-2 {
 	grid-column: 1;
 }
 
-/*@media screen and (max-width: 850px) {*/
-/*	body.toplevel_page_wpcf7 #poststuff #post-body.columns-2 {*/
-/*		grid-template-columns: 1fr;*/
-/*		grid-template-areas:*/
-/*		"post-body-content"*/
-/*		"postbox-container-1"*/
-/*		"postbox-container-2"*/
-/*		" postbox-container-live";*/
-/*	}*/
-/*}*/
+@media screen and (max-width: 850px) {
+	body.toplevel_page_wpcf7 #poststuff {
+		grid-template-columns: 1fr;
+	}
+
+	body.toplevel_page_wpcf7 #poststuff #post-body.columns-2 {
+		grid-column: 1;
+	}
+
+	body.toplevel_page_wpcf7 #poststuff #post-body.columns-2 form#wpcf7-admin-form-element {
+		grid-column: 1;
+	}
+
+	body.toplevel_page_wpcf7 #poststuff #postbox-container-live {
+		grid-column: 1;
+		grid-row: 4;
+	}
+
+	body.toplevel_page_wpcf7 #poststuff #post-body.columns-2 #post-body-content {
+		grid-column: 1;
+	}
+
+	body.toplevel_page_wpcf7 #poststuff #post-body.columns-2 #postbox-container-1 {
+		grid-column: 1;
+	}
+}
